DATE       AUTHOR       CHANGE
---------- ------------ -------------------------------------------------------
2003-11-20 allenb       Added new util methods for getting paths in SConscripts
                        NEW VERSION: 0.0.9
2003-11-19 allenb       Fixed bug in pyste option when script does not exist.
2003-11-10 allenb       Added builder for package config scripts.
2003-11-10 allenb       Removed global Prefix() method replacing it with 
                        storing the prefix in the autodist package instead.
2003-10-?? allenb       Added support for Pyste
2003-09-09 allenb       Added install prefixes to all AutoDist packages.
                        NEW VERSION 0.0.8
2003-09-09 allenb       Added isBuilt interface.
                        Fixed bug that prevented libraries from building in
                        build directories
                        NEW VERSION 0.0.7
           allenb       major refactoring of system
                        NEW VERSION 0.0.6
                        NEW VERSION 0.0.5
                        NEW VERSION 0.0.4
                        NEW VERSION 0.0.3
                        NEW VERSION 0.0.2
2003-08-22 allenb       Initial version
                        NEW VERSION 0.0.1
2003-08-22 allenb       Added initial implementation of Options addon.
                        NEW VERSION 0.1.0

