@@ -1,5 +1,8 @@
 DATE       AUTHOR       CHANGE
 ---------- ------------ -------------------------------------------------------
+2003-12-22 allenb       Added FileBundle object for installing sets of files
+                        within a package.
+                        NEW VERSION: 0.0.10
 2003-11-20 allenb       Added new util methods for getting paths in SConscripts
                         NEW VERSION: 0.0.9
 2003-11-19 allenb       Fixed bug in pyste option when script does not exist.
